# config_um

./: README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: default_template.md
.github/workflows/: ci.yml  write-json.yml
notebooks/: example.ipynb
scripts/: config_to_json.py
src/config_um/: __init__.py
src/config_um/configs/: astrophysics.toml  config_um.json  observatory.toml  telescope.toml
src/config_um/support_data/astrophysics/: README.md  zodiacal_model_001.fits
src/config_um/support_data/coatings/: README.md
src/config_um/support_data/opds/: README.md
src/config_um/support_data/optical_designs/: Lazuli_Mark-11.STP  Lazuli_Mark-11.zmx  Lazuli_Mark-11.zprj  README.md  Ultramarine_Mark-11.STP  Ultramarine_Mark-11.zmx  Ultramarine_Mark-11.zprj
src/config_um/support_data/psds/: README.md
tests/: test_config_files.py  test_version_consistency.py
