# This part shouldn't change
[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "config_um" # <- Edit this (repo name)
description = "Configuration repository for Ultra-marine." # Edit this
readme = "README.md"
license = { text = "GNU GENERAL PUBLIC LICENSE - Verison 3" }
requires-python = ">=3.8"
dependencies = [
    "utils_config @ git+https://github.com/uasal/utils_config.git@develop"  
]
dynamic = ["version"]

# Edit this section with URLs for the README.md, CHANGELOG.md, and repository.
[project.urls]
Homepage = "https://github.com/uasal/config_um/blob/develop/README.md" 
Changelog = "https://github.com/uasal/config_um/blob/develop/CHANGELOG.md" 
Repository = "https://github.com/uasal/config_um" 

[tool.setuptools]
packages = ["config_um"] # Edit this to package name (repo name)
package-dir = { "" = "src" }
include-package-data = true

# Generated the _version.py automatically from GitHub tags
[tool.setuptools_scm]
write_to = "src/config_um/_version.py" # Modify the path where the _version.py lives
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]

# This should match the path for the write_to under tool.setuptools_scm
[tool.coverage.run]
omit=["src/config_um/_version.py"] # Modify the path where the _version.py lives 

[tool.setuptools.package-data]
"config_um" = ["support_data/**/*", "configs/**/*.toml"] # Edit the config_project part
