# This part shouldn't change
[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "config_um"
description = "Configuration repository for Ultra-marine."
readme = "README.md"
license = { text = "GNU GENERAL PUBLIC LICENSE - Verison 3" }
requires-python = ">=3.8"
dependencies = [
    "utils_config @ git+https://github.com/uasal/utils_config.git@develop"  
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/uasal/config_um/blob/develop/README.md" 
Changelog = "https://github.com/uasal/config_um/blob/develop/CHANGELOG.md" 
Repository = "https://github.com/uasal/config_um" 

[tool.setuptools]
packages = ["config_um"] 
package-dir = { "" = "src" }
include-package-data = true

# Generated the _version.py automatically from GitHub tags
[tool.setuptools_scm]
write_to = "src/config_um/_version.py"
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.pytest.ini_options]
testpaths = [
	"tests",
]

[tool.coverage.run]
omit=["src/config_um/_version.py"] 

[tool.setuptools.package-data]
"config_um" = ["support_data/**/*", "configs/**/*.toml"] 
